--- a/index.html
+++ b/index.html
@@ -2,58 +2,164 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/style.css">
+
   <title>Document</title>
 </head>
 <body>
   <header class="header">
-
-    <video preload="none" autoplay loop muted playsinline class="video">
+    <div class="container">
+      <div class="wrapper">
+        <div class="header__logo">
+          <a href="#" class="header__link">
+            <img src="img/git-logo.png" alt="" class="header__image">
+          </a>
+        </div>
+        <nav class="navbar">
+          <ul class="navbar__collapse">
+            <li class="navbar__item">
+              <a href="#" class="navbar__link">Our Services</a>
+            </li>
+            <li class="navbar__item">
+              <a href="#" class="navbar__link">Case Studies</a>
+            </li>
+            <li class="navbar__item">
+              <a href="#" class="navbar__link">Blog</a>
+            </li>
+            <li class="navbar__item">
+              <a href="#" class="navbar__link">Our Team</a>
+            </li>
+            <li class="navbar__item">
+              <a href="#" class="navbar__link">Contact</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </header>
+<div class="home">
+  <div class="video-block">
+    <video preload="none" autoplay loop muted playsinline class="video-block__video">
       <source type="video/mp4" src="https://d1o6pphsuqk08k.cloudfront.net/uploads/2019/04/film-6.mp4?v=f64da811e4cb9e5589c23e2994cd5e89">
     </video>
-    <div class="container">
-    <div class="wrapper">
-    <div class="header__logo">
-      <a href="#" class="header__link">
-        <img src="img/git-logo.png" alt="" class="header__image">
+  </div>
+  <div class="main-content">
+    <div class="title">
+      <h1>SOFTWARE DEVELOPMENT & DATA SERVICES</h1>
+    </div>
+    <div class="subtitle">
+      <h2>With brilliance & dedication, our large multi-cultural team strives to achieve one goal - deliver meaningful <br>solutions to help add value, optimize business processes and maximize profits for our clients.</h2>
+    </div>
+    <button class="button">Contact Us</button>
+  </div>
+  <div class="container-home__wave-block">
+    <svg viewBox="0 0 120 16">
+      <g class="container-home__wave">
+        <path class="container-home__wave-path" d="M 0,0 C 30,0 30,5 60,5 90,5 90,0 120,0 150,0 150,5 180,5 210,5 210,0 240,0 v 25 h -240 z" fill="#fff"></path>
+      </g>
+    </svg>
+  </div>
+</div>
+
+
+
+<div class="services">
+  <div class="container">
+    <div class="row">
+      <a href="#"  class="cards col-md-4">
+        <div class="cards__software">
+          <img class="cards__image" src="img/icon/web-dev.svg" alt="">
+          <div class="cards__wrapper">
+            <div class="cards__title">Web Development</div>
+            <div class="cards__descr">Expand your online presence and get the future-proof solution to your business needs with our web development services.</div>
+          </div>
+        </div>
+      </a>
+
+      <a href="#"  class="cards col-md-4">
+        <div class="cards__software">
+          <img class="cards__image" src="img/icon/mobile_dev.svg" alt="">
+          <div class="cards__wrapper">
+            <div class="cards__title">Mobile Development</div>
+            <div class="cards__descr">Get a competitive edge, increase your brand recognition and create loyalty with great mobile applications.</div>
+          </div>
+        </div>
+      </a>
+
+      <a href="#"  class="cards col-md-4">
+        <div class="cards__software">
+          <img class="cards__image" src="img/icon/ux-ui.svg" alt="">
+          <div class="cards__wrapper">
+            <div class="cards__title">UI/UX Design</div>
+            <div class="cards__descr">Get slick, responsive, and intuitive designs for web & mobile apps. They fit any taste and budget.</div>
+          </div>
+        </div>
+      </a>
+
+      <a href="#"  class="cards col-md-4">
+        <div class="cards__software">
+          <img class="cards__image" src="img/icon/devops.svg" alt="">
+          <div class="cards__wrapper">
+            <div class="cards__title">DevOps and Cloud</div>
+            <div class="cards__descr">Deploy your apps fast and reliably with our DevOps toolset and evolve them easily in the cloud.</div>
+          </div>
+        </div>
+      </a>
+
+      <a href="#"  class="cards col-md-4">
+        <div class="cards__software">
+          <img class="cards__image" src="img/icon/online-shop.svg" alt="">
+          <div class="cards__wrapper">
+            <div class="cards__title">Online Marketing</div>
+            <div class="cards__descr">Ensure high visibility of your site with the help of online marketing such as a successful SEO strategy and blog promotion.</div>
+          </div>
+        </div>
+      </a>
+
+      <a href="#"  class="cards col-md-4">
+        <div class="cards__software">
+          <img class="cards__image" src="img/icon/pm.svg" alt="">
+          <div class="cards__wrapper">
+            <div class="cards__title">Project Management</div>
+            <div class="cards__descr">Get efficient project management according to the agile process with regular updates and reports.</div>
+          </div>
+        </div>
+      </a>
+
+      <a href="#" class="cards col-md-4">
+        <div class="cards__software">
+          <img class="cards__image" src="img/icon/qa.svg" alt="">
+          <div class="cards__wrapper">
+            <div class="cards__title">Quality Assurance</div>
+            <div class="cards__descr">Experience seamless and trouble-free flow on any device with our experienced quality assurance engineers.</div>
+          </div>
+        </div>
       </a>
     </div>
-    <nav class="navbar">
-      <ul class="navbar__collapse">
-        <li class="navbar__item">
-          <a href="#" class="navbar__link">Our Services</a>
-        </li>
-        <li class="navbar__item">
-          <a href="#" class="navbar__link">Case Studies</a>
-        </li>
-        <li class="navbar__item">
-          <a href="#" class="navbar__link">Blog</a>
-        </li>
-        <li class="navbar__item">
-          <a href="#" class="navbar__link">Our Team</a>
-        </li>
-        <li class="navbar__item">
-          <a href="#" class="navbar__link">Contact</a>
-        </li>
-      </ul>
-    </nav>
   </div>
-  </header>
 </div>
-<div class="main-content">
-  <div class="title">
-    <h1>SOFTWARE DEVELOPMENT & DATA SERVICES</h1>
+
+<div class="customers">
+  <div class="customers__title">Our Customers Are</div>
+  <div class="row">
+    <div class="customers__one col-md-6">
+      <div class="customers__subtitle">Startups</div>
+      <div class="customers__descr">We Help You Launch Your Idea Fast and Within Budget</div>
+      <button class="button customers-button">View More</button>
+      <div class="customers__one-image">
+
+      </div>
+    </div>
+    <div class="customers__two  col-md-6">
+      <div class="customers__subtitle">Businesses</div>
+      <div class="customers__descr">We Help Your Business"</div>
+      <button class="button customers-button">View More</button>
+    </div>
   </div>
-  <div class="subtitle">
-    <h2>With brilliance & dedication, our large multi-cultural team strives to achieve one goal - deliver meaningful <br>solutions to help add value, optimize business processes and maximize profits for our clients.</h2>
-  </div>
-  <button class="button">Click
-  </button>
 </div>
 </body>
 </html>
