add tech stack block

--- a/index.html
+++ b/index.html
@@ -161,5 +161,202 @@
     </div>
   </div>
 </div>
+<div class="tech">
+  <div class="tech__title">TECH STACK</div>
+  <div class="container">
+    <div class="row">
+      <div class="tech__card col-md-3">
+        <div class="tech-stack">
+
+          <img src="img/technology/R_Angular2.svg" alt="" class="tech-stack__img">
+          <div class="tech-stack__title">Angular</div>
+        </div>
+
+        <p>This open source JavaScript framework to build web applications in HTML and JavaScript. Its code conciseness
+          makes an application with a heavy load run fully UI responsive. Besides that it uses server side rendering for
+          fast views on mobile, works well with ECMAScript and other languages that compile to JavaScript and uses dependency
+          injection to maintain applications without writing too long code – all this allows to meet your product expectations
+          in a component based approach.</p>
+        <div href="javascript:void();" class="readmore-btn">Read more ></div>
+      </div>
+
+      <div class="tech__card col-md-3">
+        <div class="tech-stack">
+          <img src="img/technology/R_Vuejs.svg" alt="" class="tech-stack__img">
+          <div class="tech-stack__title">Vue.js</div>
+        </div>
+
+        <p>One of the most rapidly growing JS frameworks in 2016 with very detailed and easy to follow documentation
+          covering multiple use cases and all the various options, where applicable, for each of it’s built in methods
+          Unlike other monolithic frameworks, Vue is designed from the ground up to be incrementally adoptable. The core
+          library is focused on the view layer only, and is very easy to pick up and integrate with other libraries or
+          existing projects. Vue is also perfectly capable of powering sophisticated Single-Page Applications when used
+          in combination with modern tooling and supporting libraries.
+        </p>
+        <div href="javascript:void();" class="readmore-btn">Read more ></div>
+      </div>
+
+      <div class="tech__card col-md-3">
+        <div class="tech-stack">
+          <img src="img/technology/R_ReactRedux.svg" alt="" class="tech-stack__img">
+          <div class="tech-stack__title" style="margin-left: 10%;">React.js / Redux</div>
+        </div>
+
+        <p>One of the unique features of React is not only it can perform on the client side, but it can
+          also be rendered on the server side, and they can work together interoperably. React creates its
+          own virtual DOM where the components actually live. This approach gives an enormous flexibility
+          and amazing gain in performance. React also calculates what are the changes needed to be made in DOM.
+          This process of React avoids expensive DOM operations and makes updates in a very cient manner.
+        </p>
+        <div href="javascript:void();" class="readmore-btn">Read more ></div>
+      </div>
+
+      <div class="tech__card col-md-3">
+        <div class="tech-stack">
+          <img src="img/technology/R_Laravel.svg" alt="" class="tech-stack__img">
+          <div class="tech-stack__title">Laravel</div>
+        </div>
+
+        <p>
+          This framework has familiar and intuitive Query Builder, migrations and ORM; great amount of
+          packages in Laravel Composer; plenty of OOP patterns (like Dependency Injection, Repository,
+          Factory, Service Provider, Active Record, Singleton etc.); variety of "helper" PHP functions
+          and surely Don’t-Repeat-Yourself (DRY) principle.
+        </p>
+        <div href="javascript:void();" class="readmore-btn">Read more ></div>
+      </div>
+
+      <div class="tech__card col-md-3">
+        <div class="tech-stack">
+          <img src="img/technology/R_Django.svg" alt="" class="tech-stack__img">
+          <div class="tech-stack__title">Django</div>
+        </div>
+
+        <p>
+          The only framework that has the ability to generate admin panels on the fly depending on the
+          database schema and table relations. All the range of modern features built in Python Django
+          Framework (Models, QuerySets, various Services, Migrations, ORM etc) make it the most
+          powerful framework as of today and helps to write a clear, reliable and readable code.
+        </p>
+        <div href="javascript:void();" class="readmore-btn">Read more ></div>
+      </div>
+
+      <div class="tech__card col-md-3">
+        <div class="tech-stack">
+          <img src="img/technology/R_Nodejs.svg" alt="" class="tech-stack__img">
+          <div class="tech-stack__title">Node.js</div>
+        </div>
+
+        <p>
+          This environment increases development speed and productivity of your team. Its
+          high-scalability lets you spend less time on infrastructure, since you can handle the same
+          amount of load with less hardware.
+        </p>
+        <div href="javascript:void();" class="readmore-btn">Read more ></div>
+      </div>
+
+      <div class="tech__card col-md-3">
+        <div class="tech-stack">
+          <img src="img/technology/R_PHP.svg" alt="" class="tech-stack__img">
+          <div class="tech-stack__title">PHP</div>
+        </div>
+
+        <p>
+          Enables fast implementation of complex solutions. Being mainly focused on server-side
+          scripting PHP can be used on all major operating systems (Linux, Unix variants, Microsoft
+          Windows, Mac OS X and etc.), supports the most of the web servers. PHP works either as a
+          module, or as a CGI processor.
+        </p>
+        <div href="javascript:void();" class="readmore-btn">Read more ></div>
+      </div>
+
+      <div class="tech__card col-md-3">
+        <div class="tech-stack">
+          <img src="img/technology/R_Python.svg" alt="" class="tech-stack__img">
+          <div class="tech-stack__title">Python</div>
+        </div>
+
+        <p>
+          A general-purpose substrate for many kinds of software development, that offers strong
+          support for integrating with other technologies, higher programmer productivity throughout
+          the development life cycle, and is particularly well suited for large or complex projects
+          with changing requirements. Its simplicity, clear syntax, multiple well structured modules
+          and packages, and its enormous flexibility is what sets it apart from other programming
+          languages.
+        </p>
+        <div href="javascript:void();" class="readmore-btn">Read more ></div>
+      </div>
+
+      <div class="tech__card col-md-3">
+        <div class="tech-stack">
+          <img src="img/technology/R_Javascript.svg" alt="" class="tech-stack__img">
+          <div class="tech-stack__title">Javascript</div>
+        </div>
+
+        <p>
+          Uses range from on screen visual effects to processing and calculating data on web pages with
+          ease as well as extended functionality to websites using third party scripts among several
+          other handy features. Being client-side, JavaScript is very fast and also the demand on the
+          website server.
+        </p>
+        <div href="javascript:void();" class="readmore-btn">Read more ></div>
+      </div>
+
+      <div class="tech__card col-md-3">
+        <div class="tech-stack">
+          <img src="img/technology/R_MySQL.svg" alt="" class="tech-stack__img">
+          <div class="tech-stack__title">MySQL</div>
+        </div>
+
+        <p>
+          One of the most popular relational database management systems in the world due to its
+          scalability, flexibility, high performance and availability, strong data protection and
+          management ease which allows to drive digital transformation initiatives delivering modern
+          Web, mobile and Cloud-based applications.
+        </p>
+        <div href="javascript:void();" class="readmore-btn">Read more ></div>
+      </div>
+
+      <div class="tech__card col-md-3">
+        <div class="tech-stack">
+          <img src="img/technology/R_PostgreSQL.svg" alt="" class="tech-stack__img">
+          <div class="tech-stack__title">PostgreSQL</div>
+        </div>
+        <p>
+          Differs itself with its support for highly required and integral object-oriented and/or
+          relational database functionality. It is highly programmable, and therefore extendible, with
+          custom "stored procedures", which can be created to simplify the execution of repeated,
+          complex and often required DB operations.
+        </p>
+        <div href="javascript:void();" class="readmore-btn">Read more ></div>
+      </div>
+
+      <div class="tech__card col-md-3">
+        <div class="tech-stack">
+          <img src="img/technology/R_MongoDB.svg" alt="" class="tech-stack__img">
+          <div class="tech-stack__title">MongoDB</div>
+        </div>
+
+        <p>
+          This document-based data model has the basic unit of storage analogous to JSON, Python
+          dictionaries, Ruby hashes, etc. Its rich data structure is capable of holding arrays and
+          other documents, which support dynamic queries on documents using a document-based query
+          language that's nearly as powerful as SQL. Since MongoDB is schema-free, your code defines
+          your schema.
+        </p>
+        <div href="javascript:void();" class="readmore-btn">Read more ></div>
+      </div>
+
+
+    </div>
+  </div>
+</div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js" ></script>
+<script>
+		$(".readmore-btn").on('click', function () {
+        $(this).parent().toggleClass("showContent");
+		})
+</script>
 </body>
+
 </html>
