add contact form

--- a/index.html
+++ b/index.html
@@ -145,6 +145,8 @@
 
 <div class="customers">
   <div class="customers__title">Our Customers Are</div>
+  <hr class="hr__one">
+  <hr class="hr__two">
   <div class="row">
     <div class="customers__one col-md-6">
       <div class="customers__subtitle">Startups</div>
@@ -163,6 +165,8 @@
 </div>
 <div class="tech">
   <div class="tech__title">TECH STACK</div>
+  <hr class="hr__one">
+  <hr class="hr__two">
   <div class="container">
     <div class="row">
       <div class="tech__card col-md-3">
@@ -346,11 +350,46 @@
         </p>
         <div href="javascript:void();" class="readmore-btn">Read more ></div>
       </div>
-
-
     </div>
   </div>
 </div>
+
+<div class="contacts">
+  <div class="container">
+    <div class="contacts__wrapper">
+      <div class="contacts__main">
+        <div class="contacts__title">Contact us</div>
+        <div class="location">
+          <img src="img/contact-icon/skype.svg" alt="" style="width: 50px">
+          <a href="skype:evgeniy1112?chat" class="location__title">evgeniy1112</a>
+        </div>
+        <div class="location">
+          <img src="img/contact-icon/email.svg" alt="" style="width: 50px">
+          <a href="mailto:evgeniy.aleshin1994@gmail.com" class="location__title">evgeniy.aleshin1994@gmail.com</a>
+        </div>
+        <div class="location">
+          <img src="img/contact-icon/geo.svg" alt="" style="width: 50px">
+          <a href="https://goo.su/1mih" class="location__title">Ukraine. Zaporizhzhya</a>
+        </div>
+      </div>
+      <div class="form">
+        <div class="form__wrapper">
+          <div class="form__title">Get in Touch</div>
+          <form id="consultation-form" class="feed-form" action="#" novalidate="novalidate">
+            <input class="feed-form__input" name="name" placeholder="Name" type="text">
+            <input class="feed-form__input" name="phone" placeholder="Telephone">
+            <input class="feed-form__input" name="email" placeholder="Email Adress" type="email">
+            <textarea class="feed-form__input" placeholder="Description" rows="10" type="text"></textarea>
+            <div class="button__section">
+              <button class="button-submit">Заказать Консультацию</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js" ></script>
 <script>
 		$(".readmore-btn").on('click', function () {
