add footer block

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
   </div>
 </div>
 <div class="tech">
-  <div class="tech__title">TECH STACK</div>
+  <div class="tech__title">Tech Stack</div>
   <hr class="hr__one">
   <hr class="hr__two">
   <div class="container">
@@ -389,6 +389,75 @@
     </div>
   </div>
 </div>
+
+<footer class="footer">
+  <div class="container">
+    <div class="footer-block">
+      <ul class="list">
+        <li class="list-title">OUR SERVICES</li>
+        <li class="list-item">
+          <a href="#">Web Development</a>
+        </li>
+        <li class="list-item">
+          <a href="#">Mobile Development</a>
+        </li>
+        <li class="list-item">
+          <a href="#">UI/UX Design</a>
+        </li>
+        <li class="list-item">
+          <a href="#">DevOps and Cloud</a>
+        </li>
+        <li class="list-item">
+          <a href="#">Online Marketing</a>
+        </li>
+        <li class="list-item">
+          <a href="#">Project Management</a>
+        </li>
+        <li class="list-item">
+          <a href="#">Quality Assurance</a>
+        </li>
+      </ul>
+      <ul class="list">
+        <li class="list-title">COMPANY</li>
+        <li class="list-item">
+          <a href="#">Blog</a>
+        </li>
+        <li class="list-item">
+          <a href="#">Our Team</a>
+        </li>
+        <li class="list-item">
+          <a href="#">Connect With Us</a>
+        </li>
+        <li class="list-item">
+          <a href="#">Terms Of Use</a>
+        </li>
+      </ul>
+      <ul class="list">
+        <li class="list-title">OUR CUSTOMERS ARE</li>
+        <li class="list-item">
+          <a href="#">Startups</a>
+        </li>
+        <li class="list-item">
+          <a href="#">Businesses</a>
+        </li>
+        <li class="list-item">
+          <a href="#">Other</a>
+        </li>
+        <li class="list-item">
+          <a href="#">Consulting</a>
+        </li>
+      </ul>
+      <div class="footer-info">
+        <div class="footer-info__image">
+          <img src="img/Ubisoft_logo.svg" alt="">
+          <div class="footer-info__title">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor </div>
+        </div>
+      </div>
+    </div>
+    <hr>
+    <div class="footer-title">2020 Seld Studio.  All rights reserved.</div>
+  </div>
+</footer>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js" ></script>
 <script>
